- rework on signup front end to seperate each account type form. - current bugs in doctor and patient class to get data (REQUIRES FIX) - updated profile route. (REQUIRES FIX) - home.html not showing payload data (REQUIRES FIX)

--- a/AppointMED/static/css/style.css
+++ b/AppointMED/static/css/style.css
@@ -273,6 +273,11 @@ label {
     vertical-align: middle; /* Ensures vertical alignment */
 }
 
+.dropdown-menu-specialties,
+.dropdown-menu-coverages {
+    max-height: 150px;
+    overflow-y: auto;
+}
 /* ----------------------Profile-Home---------------------------- */
 .nav-element-profile {
     position: relative;
